--- a/all_matches.html
+++ b/all_matches.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>All Matches</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<script src="js/teams.js"></script>
@@ -27,8 +27,7 @@
 
 <script type="text/javascript">
 	
-	$.get('http://worldcup.sfg.io/matches?by_date=ASC', function( data ) {
-	  console.log(data);
+	$.get('http://worldcup.sfg.io/matches?by_date=ASC', function( data ){
 	  var today_matches= new Array();
 	  var home_flag;
 	  var away_flag;
@@ -51,7 +50,6 @@
 		}
 	  }
 	});
-	
 </script>
 
 </html>
