--- a/tomorrow.html
+++ b/tomorrow.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Tomorrow Matches</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<script src="js/teams.js"></script>
@@ -21,14 +21,10 @@
 			<a href="index.html">Today's Matches</a> | <a href="all_matches.html">All Matches</a>
 		</div>
 	</div>
-
-	
 </div>	
 
 <script type="text/javascript">
-	
 	$.get('http://worldcup.sfg.io/matches/tomorrow?by_date=ASC', function( data ) {
-	  console.log(data);
 	  var today_matches= new Array();
 	  var home_flag;
 	  var away_flag;
@@ -51,7 +47,6 @@
 		}
 	  }
 	});
-	
 </script>
 
 </html>
